# hermes-computer

./: .gitignore  MANIFEST.in  README.md  plugin.yaml  pyproject.toml
docs/: architecture.md  live-smoke.md  operator-guide.md
hermes_computer/: __init__.py  cli.py  client.py  config.py  macapp.py  models.py  plugin.py  tools.py
hermes_computer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hermes_computer/daemon/: server.py
hermes_computer/mac/: backend.py
scripts/: hermes_computer_app.py
skill/hermes-computer/: SKILL.md
skill/hermes-computer/agents/: openai.yaml
tests/: test_install.py  test_plugin.py  test_server.py
